--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -8,6 +8,6 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: '14'
-    run: npm install
-    run: npm run build
-    run: ls
+      - run: npm install
+      - run: npm run build
+      - run: ls
