--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1,9 +1,9 @@
-name: test
-run-name: learning github actions
+name: Deploy
+run-name: Deploy
 on: [push]
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: main
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
