feat: setup ci/cd pipeline

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -6,9 +6,5 @@ jobs:
     runs-on: main
     steps:
       - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
-        with:
-          node-version: '14'
-      - run: npm install
-      - run: npm run build
-      - run: ls
+      - run: docker-compose build
+      - run: docker-compose up
