--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -6,5 +6,5 @@ jobs:
     runs-on: main
     steps:
       - uses: actions/checkout@v3
-      - run: docker-compose build
-      - run: docker-compose up
+      - run: sudo docker-compose build
+      - run: sudo docker-compose up
