run docker-compose in detached mode

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -7,4 +7,4 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - run: docker-compose build
-      - run: docker-compose up
+      - run: docker-compose up -d
