--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -6,5 +6,4 @@ jobs:
     runs-on: main
     steps:
       - uses: actions/checkout@v3
-      # - run: docker-compose build
-      - run: docker-compose up -d --build
+      - run: docker compose up -d --build
