--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "swr": "^2.0.0",
     "zod": "^3.19.0"
   },
   "devDependencies": {
