fix: make server work properly as spa server

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,6 +1,10 @@
 server { 
  listen 80;
- server_name rcebot.tk;
+ server_name rcenext.ru;
  index index.html;
  root /var/www/html;
+
+ location / {
+  try_files $uri /index.html;
+ }
 }
