feat: download btn

--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.6.0",
     "swr": "^2.0.0",
-    "zod": "^3.19.0"
+    "zod": "^3.19.0",
+    "zustand": "^4.4.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.17",
